# notcurses_game

./: CMakeLists.txt  README.md
.cache/clangd/index/: debug_plane.c.68E543F08032EE78.idx  debug_plane.h.1F77D53CD331141D.idx  main.c.27876CBFA9E69202.idx  main.c.A99ABCF144F2ED02.idx  player.c.EC9851CED6A06C55.idx  player.h.0E0DBE1DF759EFAC.idx  world.c.145B4F5C5D864542.idx  world.h.89C5986A556A43EC.idx
lib/gamelib/: common.h  debug_plane.c  debug_plane.h  world.c  world.h
lib/gamelib/move_obj/: player.c  player.h
src/: main.c
